add reset button

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title>Minesweeper</title>
-    <link rel="stylesheet" href="minesweeper.css">
+    <link rel="stylesheet" href="minesweeper.css" />
     <script src="lib/tests.js"></script>
     <script src="lib/lib.js"></script>
     <script src="minesweeper.js"></script>
@@ -11,5 +11,8 @@
     <div id="message"></div>
     <div id="notes"></div>
     <div class="board"></div>
+    <div id="button" style="margin-top: 20px;">
+      <button id="reset">Play again</button>
+    </div>
   </body>
 </html>
